# memer

./: Cargo.toml  Dockerfile  README.md  fly.toml  gamersbot.service  properties.toml  properties_test.toml
.cargo/: config.toml
.github/workflows/: rust-dev.yml  rust.yml
scripts/: deploy.sh
src/: main.rs  reddit.rs  tumblr.rs  youtube.rs
src/downloaders/: LoadError.rs  lib.rs  loaderror.rs  mod.rs  reddit.rs  tiktok.rs  tumblr.rs  youtube.rs
src/handlers/: automatic_handler.rs  mod.rs
src/resources/: properties.toml
