[package]
name = "gamers_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
tokio = { version = "1.23.0", features = ["full"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
toml = "0.5.10"
serde = "1.0.152"
serde_json = "1.0.91"
