[package]
name = "gamers_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
tokio = { version = "1.23.0", features = ["macros", "process", "rt-multi-thread"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
toml = "0.7.2"
serde = "1.0.152"
serde_json = "1.0.91"
shell-words = "1.1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
image = "0.24.5"

#This dependency is needed for compile on linux
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
